--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
     </section>
 
     <section
+      id="publications"
+      class="py-24 px-2 sm:px-8 container mx-auto max-w-5xl"
+    >
+      <h1
+        class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
+      >
+        Publications
+      </h1>
+      <div class="mt-4 px-6 md:px-2">
+        <p class="text-center text-sm sm:text-base md:text-lg my-4">
+          <b>Subek Sharma</b>, Sisir Dhakal, <i>"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</i>, (Submitted to arXiv).
+        </p>
+      </div>
+    </section>
+
+    <section
       id="research"
       class="container max-w-5xl py-24 mx-auto px-2 sm:px-8"
     >
@@ -197,27 +213,20 @@
           >
             <!-- rendered by script -->
           </p>
+          <ul
+            class="list-disc text-sm sm:text-base md:text-lg mx-8 my-8 flex flex-col gap-4"
+            renderitem="researchList"
+          >
+            <!-- rendered by script -->
+          </ul>
         </div>
         <div>
           <img
-            src="assets/images/data_collection_photo_1.png"
-            alt="Subek Sharma"
-            class="w-2/3 mx-auto rounded-xl aspect-square object-cover"
+            src="assets/images/research.jpg"
+            alt="Research"
+            class="rounded-t-full w-full"
           />
         </div>
-      </div>
-
-      <div class="mt-8 gap-8 grid grid-cols-1 sm:grid-cols-2">
-        <img
-          src="assets/images/data_collection_photo_2.png"
-          alt="Subek Sharma"
-          class="w-2/3 mx-auto rounded-xl aspect-square object-cover"
-        />
-        <img
-          src="assets/images/data_collection_photo_3.png"
-          alt="Subek Sharma"
-          class="w-2/3 mx-auto rounded-xl aspect-square object-cover"
-        />
       </div>
     </section>
 
@@ -228,272 +237,74 @@
       <h1
         class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
       >
-        My Projects
+        Projects
       </h1>
-      <ul
-        id="listOfProjects"
-        class="gap-16 grid grid-cols-1 sm:grid-cols-2 justify-between items-center"
+
+      <div
+        id="projectsList"
+        class="grid grid-cols-1 sm:grid-cols-2 gap-8 justify-between items-center"
       >
         <!-- rendered by script -->
-      </ul>
+      </div>
     </section>
 
     <section
       id="contact"
-      class="container max-w-5xl my-24 mx-auto px-2 sm:px-8"
+      class="py-24 px-2 sm:px-8 container mx-auto max-w-5xl"
     >
       <h1
         class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
       >
-        Certifications
+        Contact
       </h1>
 
-      <div class="flex flex-col gap-2">
-        <ul class="list-disc">
-          <a
-            href="https://www.coursera.org/account/accomplishments/specialization/9Z4N4R2DF32F"
-            class="font-semibold underline underline-offset-2"
-            >MACHINE Learning Specialization</a
-          >
-
-          <li class="ml-4 text-sm text-gray-700">
-            Supervised Machine Learning: Regression and Classification
-          </li>
-          <li class="ml-4 text-sm text-gray-700">
-            Advanced Learning Algorithms
-          </li>
-          <li class="ml-4 text-sm text-gray-700">
-            Unsupervised Learning Recommenders Reinforcement Learning
-          </li>
-        </ul>
-        <ul class="list-disc">
-          <a
-            href="https://www.coursera.org/account/accomplishments/specialization/certificate/SD5PRKBRHY6Q"
-            class="font-semibold underline underline-offset-2"
-            >Deep Learning Specialization</a
-          >
-
-          <li class="ml-4 text-sm text-gray-700">
-            Neural Networks and Deep Learning
-          </li>
-          <li class="ml-4 text-sm text-gray-700">
-            Improving Deep Neural Networks: Hyperparameter Tuning,
-            Regularization and Optimization
-          </li>
-          <li class="ml-4 text-sm text-gray-700">
-            Structuring Machine Learning Projects
-          </li>
-          <li class="ml-4 text-sm text-gray-700">
-            Convolutional Neural Networks
-          </li>
-          <li class="ml-4 text-sm text-gray-700">Sequence Models</li>
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/certificate/CZZAJXFNZZS4"
-            class="font-semibold underline underline-offset-2"
-          >
-            Introduction to TensorFlow for Artificial Intelligence, Machine
-            Learning, and Deep Learning
-          </a>
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/verify/R3DTHFUMASG5"
-            class="font-semibold underline underline-offset-2"
-            >Convolutional Neural Networks in TensorFlow</a
-          >
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/certificate/G5HFJ4W6LR8D"
-            class="font-semibold underline underline-offset-2"
-            >Natural Language Processing in TensorFlow</a
-          >
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/certificate/LZHSKC5H8KJX"
-            class="font-semibold underline underline-offset-2"
-            >Natural Language Processing with Classification and Vector
-            Spaces</a
-          >
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/verify/LML28R3QMMXZ"
-            class="font-semibold underline underline-offset-2"
-            >Aerial Image Segmentation with PyTorch</a
-          >
-        </ul>
-
-        <ul>
-          <a
-            href="https://www.coursera.org/account/accomplishments/verify/CE9E9AMP6FA5"
-            class="font-semibold underline underline-offset-2"
-            >Deep Learning with PyTorch : GradCAM</a
-          >
-        </ul>
-      </div>
+      <form
+        action="https://getform.io/f/857c7618-3f57-4114-bbab-5b5fa95f7d73"
+        method="POST"
+        class="flex flex-col justify-center w-full mx-auto"
+      >
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <div class="flex flex-col">
+            <label for="name" class="text-lg">Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              class="p-2 border border-gray-300 rounded-md"
+            />
+          </div>
+          <div class="flex flex-col">
+            <label for="email" class="text-lg">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="p-2 border border-gray-300 rounded-md"
+            />
+          </div>
+        </div>
+        <div class="flex flex-col mt-4">
+          <label for="message" class="text-lg">Message:</label>
+          <textarea
+            id="message"
+            name="message"
+            rows="4"
+            class="p-2 border border-gray-300 rounded-md"
+          ></textarea>
+        </div>
+        <button
+          type="submit"
+          class="bg-indigo-600 text-white py-2 px-4 rounded-md mt-4 hover:bg-indigo-700 transition-colors"
+        >
+          Submit
+        </button>
+      </form>
     </section>
 
-    <footer class="bg-[#5e17eb] py-16">
-      <div
-        class="max-w-5xl mx-auto px-2 sm:px-8 grid grid-cols-1 sm:grid-cols-2 gap-4"
-      >
-        <div class="flex flex-col">
-          <p class="text-6xl text-white text-serif">
-            Reach out if you want to connect.
-          </p>
-
-          <hr class="border border-white my-8" />
-
-          <p class="uppercase tracking-wide text-white">Lets connect:</p>
-
-          <div class="flex items-center gap-4 flex-wrap my-4">
-            <a
-              href="https://www.researchgate.net/profile/Subek-Sharma"
-              title="ResearchGate"
-              ><div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/researchgate.svg"
-                  alt="ResearchGate"
-                  class="w-5 h-5 aspect-square"
-                /></div
-            ></a>
-
-            <a
-              href="https://www.linkedin.com/in/subek-sharma/"
-              title="LinkedIn"
-            >
-              <div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/linkedin.svg"
-                  alt="LinkedIn"
-                  class="w-5 h-5 aspect-square"
-                />
-              </div>
-            </a>
-
-            <a href="https://github.com/SubekSharma" title="GitHub">
-              <div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/github.svg"
-                  alt="GitHub"
-                  class="w-5 h-5 aspect-square"
-                />
-              </div>
-            </a>
-
-            <a href="https://twitter.com/tsubek" title="Twitter">
-              <div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/twitter.svg"
-                  alt="Twitter"
-                  class="w-5 h-5 aspect-square"
-                />
-              </div>
-            </a>
-
-            <a
-              href="https://www.instagram.com/subek_kashyap_adhikary/"
-              title="Instagram"
-            >
-              <div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/instagram.svg"
-                  alt="Instagram"
-                  class="w-5 h-5 aspect-square"
-                />
-              </div>
-            </a>
-
-            <a href="https://blog.subeksharma.com.np/" title="Blog">
-              <div
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/blog.svg"
-                  alt="Blog"
-                  class="w-6 h-6 aspect-square"
-                />
-              </div>
-            </a>
-
-            <a href="https://subek-sharma.tiiny.site/" title="CV">
-              <p
-                class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-              >
-                <img
-                  src="assets/icons/cv.svg"
-                  alt="CV"
-                  class="w-6 h-6 aspect-square"
-                />
-              </p>
-            </a>
-          </div>
-        </div>
-
-        <div class="my-2 md:ml-auto grid grid-cols-1 gap-4">
-          <div class="mr-2 mb-2 flex items-center gap-4">
-            <div
-              class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center border-2"
-            >
-              <img src="assets/icons/phone.svg" alt="Phone" class="w-8 h-8" />
-            </div>
-            <div class="">
-              <p class="text-white uppercase text-xs font-semibold">Phone</p>
-              <a href="tel:+9779845625240">
-                <p
-                  renderitem="phone"
-                  class="text-white text-serif text-lg font-[300]"
-                >
-                  <!-- rendered by script -->
-                </p>
-              </a>
-            </div>
-          </div>
-
-          <div class="mr-2 mb-2 flex items-center gap-4">
-            <div
-              class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
-            >
-              <img src="assets/icons/mail.svg" alt="Email" class="w-8 h-8" />
-            </div>
-            <div class="">
-              <p class="text-white uppercase text-xs font-semibold">Email</p>
-              <a href="mailto:subeksharma11@gmail.com">
-                <p
-                  renderitem="email"
-                  class="text-white text-serif text-lg font-[300]"
-                >
-                  <!-- rendered by script -->
-                </p>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+    <footer class="bg-gray-800 py-4 text-center text-white mt-8">
+      &copy; 2024 Subek Sharma. All Rights Reserved.
     </footer>
 
-    <script src="assets/js/menu.js"></script>
-    <script src="assets/js/persona.js" type="module"></script>
-    <script src="assets/js/education.js" type="module"></script>
-    <script src="assets/js/projects.js" type="module"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
