--- a/index.html
+++ b/index.html
@@ -219,7 +219,17 @@
           class="w-2/3 mx-auto rounded-xl aspect-square object-cover"
         />
       </div>
+      
     </section>
+        <section id="publications" class="container max-w-5xl py-24 mx-auto px-2 sm:px-8">
+  <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Publications</h1>
+  <div class="mt-4">
+    <p class="text-justify text-sm sm:text-base md:text-lg my-4">
+      Subek Sharma, Sisir Dhakal, "Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?", (Submitted to arXiv).
+    </p>
+  </div>
+</section>
+
 
     <section
       id="projects"
