--- a/index.html
+++ b/index.html
@@ -225,11 +225,9 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Publications</h1>
   <div class="mt-4">
     <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-      Subek Sharma, Sisir Dhakal, "Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?", (Submitted to arXiv).
-    </p>
+<b>Subek Sharma</b>, Sisir Dhakal, <i>"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</i>, (Submitted to arXiv).    </p>
   </div>
 </section>
-
 
     <section
       id="projects"
