--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Publications</h1>
   <div class="mt-4">
     <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-<b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar <i>"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</i>, (currently in review).    </p>
+<b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar <i>"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</i>, (In review).    </p>
   </div>
 </section>
 
