--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Publications</h1>
   <div class="mt-4">
     <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-<b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar <i>"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</i>, (In review).    </p>
+<b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar <i><a href="https://www.academia.edu/121953366/Evaluating_Transfer_Learning_in_Deep_Learning_Models_for_Classification_on_a_Custom_Wildlife_Dataset_Can_YOLOv8_Surpass_Other_Architectures">"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</a></i>, (In review).
+    </p>
   </div>
 </section>
 
