--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <p
         class="text-center text-base md:text-sm lg:text-2xl max-w-xl my-4 md:my-8"
       >
-        "Bringing ideas to life, one pixel at a time."
+        “Neurons that fire together, wire together.” - Donald Hebb.
       </p>
     </section>
 
