--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
         >
       </h1>
 
-      <p
-        class="text-center text-base md:text-sm lg:text-2xl max-w-xl my-4 md:my-10"
-      >
-        “Neurons that fire together, wire together.” - Donald Hebb.
+      <div style="text-align: center; font-size: 1.25em; max-width: 40em; margin: 2em auto;">
+    <p>“Neurons that fire together, wire together.” - Donald Hebb</p>
+</div>
       </p>
     </section>
 
