--- a/index.html
+++ b/index.html
@@ -177,6 +177,33 @@
       </div>
     </section>
 
+    <section id="skills" class="container max-w-5xl py-24 mx-auto px-2 sm:px-8">
+  <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Skills</h1>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+    <div class="flex items-center gap-4">
+      <img src="assets/icons/python.svg" alt="Python" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Python</p>
+    </div>
+    <div class="flex items-center gap-4">
+      <img src="assets/icons/deep_learning.svg" alt="Deep Learning" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Deep Learning</p>
+    </div>
+    <div class="flex items-center gap-4">
+      <img src="assets/icons/machine_learning.svg" alt="Machine Learning" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Machine Learning</p>
+    </div>
+    <div class="flex items-center gap-4">
+      <img src="assets/icons/computer_vision.svg" alt="Computer Vision" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Computer Vision</p>
+    </div>
+    <div class="flex items-center gap-4">
+      <img src="assets/icons/researching.svg" alt="Researching" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Researching</p>
+    </div>
+  </div>
+</section>
+
+
     <section
       id="research"
       class="container max-w-5xl py-24 mx-auto px-2 sm:px-8"
