--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Skills</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
     <div class="flex items-center gap-4">
-      <img src="assets/icons/python.svg" alt="Python" class="w-12 h-12" />
+      <img src="assets/icons/python-1.png" alt="Python" class="w-12 h-12" />
       <p class="text-lg font-medium text-gray-700">Python</p>
     </div>
     <div class="flex items-center gap-4">
-      <img src="assets/icons/deep_learning.svg" alt="Deep Learning" class="w-12 h-12" />
+      <img src="assets/icons/dl.png" alt="Deep Learning" class="w-12 h-12" />
       <p class="text-lg font-medium text-gray-700">Deep Learning</p>
     </div>
     <div class="flex items-center gap-4">
-      <img src="assets/icons/machine_learning.svg" alt="Machine Learning" class="w-12 h-12" />
+      <img src="assets/icons/ml.png" alt="Machine Learning" class="w-12 h-12" />
       <p class="text-lg font-medium text-gray-700">Machine Learning</p>
     </div>
     <div class="flex items-center gap-4">
-      <img src="assets/icons/computer_vision.svg" alt="Computer Vision" class="w-12 h-12" />
+      <img src="assets/icons/cv.png" alt="Computer Vision" class="w-12 h-12" />
       <p class="text-lg font-medium text-gray-700">Computer Vision</p>
     </div>
     <div class="flex items-center gap-4">
-      <img src="assets/icons/researching.svg" alt="Researching" class="w-12 h-12" />
-      <p class="text-lg font-medium text-gray-700">Researching</p>
+      <img src="assets/icons/research.png" alt="Researching" class="w-12 h-12" />
+      <p class="text-lg font-medium text-gray-700">Research</p>
     </div>
   </div>
 </section>
