--- a/index.html
+++ b/index.html
@@ -194,13 +194,16 @@
       <img src="assets/icons/ml.png" alt="Machine Learning" class="w-24 h-24" />
       <p class="text-lg font-medium text-gray-700">Machine Learning</p>
     </div>
-    <div class="flex items-center gap-4 lg:col-span-1 lg:mt-8">
-      <img src="assets/icons/cv.png" alt="Computer Vision" class="w-24 h-24" />
-      <p class="text-lg font-medium text-gray-700">Computer Vision</p>
-    </div>
-    <div class="flex items-center gap-4 lg:col-span-1 lg:mt-8">
-      <img src="assets/icons/research.png" alt="Researching" class="w-24 h-24" />
-      <p class="text-lg font-medium text-gray-700">Research</p>
+    <!-- Centered bottom items -->
+    <div class="lg:col-span-3 flex justify-center gap-8 mt-16">
+      <div class="flex items-center gap-4">
+        <img src="assets/icons/cv.png" alt="Computer Vision" class="w-24 h-24" />
+        <p class="text-lg font-medium text-gray-700">Computer Vision</p>
+      </div>
+      <div class="flex items-center gap-4">
+        <img src="assets/icons/research.png" alt="Researching" class="w-24 h-24" />
+        <p class="text-lg font-medium text-gray-700">Research</p>
+      </div>
     </div>
   </div>
 </section>
