--- a/index.html
+++ b/index.html
@@ -177,33 +177,32 @@
       </div>
     </section>
 
-</section>
-
 <section id="skills" class="container max-w-5xl py-24 mx-auto px-2 sm:px-8">
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Skills</h1>
-  <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-16">
-    <div class="flex items-center gap-4 lg:col-span-1">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-16">
+    <div class="flex flex-col items-center gap-4">
       <img src="assets/icons/python-1.png" alt="Python" class="w-24 h-24" />
       <p class="text-lg font-medium text-gray-700">Python</p>
     </div>
-    <div class="flex items-center gap-4 lg:col-span-1">
+    <div class="flex flex-col items-center gap-4">
       <img src="assets/icons/dl.png" alt="Deep Learning" class="w-24 h-24" />
       <p class="text-lg font-medium text-gray-700">Deep Learning</p>
     </div>
-    <div class="flex items-center gap-4 lg:col-span-1">
+    <div class="flex flex-col items-center gap-4">
       <img src="assets/icons/ml.png" alt="Machine Learning" class="w-24 h-24" />
       <p class="text-lg font-medium text-gray-700">Machine Learning</p>
     </div>
-    <!-- Centered bottom items -->
-    <div class="lg:col-span-3 flex justify-center gap-8 mt-16">
-      <div class="flex items-center gap-4">
-        <img src="assets/icons/cv.png" alt="Computer Vision" class="w-24 h-24" />
-        <p class="text-lg font-medium text-gray-700">Computer Vision</p>
-      </div>
-      <div class="flex items-center gap-4">
-        <img src="assets/icons/research.png" alt="Researching" class="w-24 h-24" />
-        <p class="text-lg font-medium text-gray-700">Research</p>
-      </div>
+    <div class="flex flex-col items-center gap-4">
+      <img src="assets/icons/cv.png" alt="Computer Vision" class="w-24 h-24" />
+      <p class="text-lg font-medium text-gray-700">Computer Vision</p>
+    </div>
+    <div class="flex flex-col items-center gap-4">
+      <img src="assets/icons/research.png" alt="Researching" class="w-24 h-24" />
+      <p class="text-lg font-medium text-gray-700">Research</p>
+    </div>
+    <div class="flex flex-col items-center gap-4">
+      <img src="assets/icons/leadership.png" alt="Leadership and Communication" class="w-24 h-24" />
+      <p class="text-lg font-medium text-gray-700">Leadership and Communication</p>
     </div>
   </div>
 </section>
