--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <p class="text-lg font-medium text-gray-700">Research</p>
     </div>
     <div class="flex flex-col items-center gap-4">
-      <img src="assets/icons/leadership.png" alt="Leadership and Communication" class="w-24 h-24" />
+      <img src="assets/icons/lc.png" alt="Leadership and Communication" class="w-24 h-24" />
       <p class="text-lg font-medium text-gray-700">Leadership and Communication</p>
     </div>
   </div>
