--- a/index.html
+++ b/index.html
@@ -26,79 +26,80 @@
   </head>
 
   <body class="relative">
-    <nav
-      class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-300 mb-2 fixed right-0 left-0 z-50 top-0"
-    >
-      <div id="horizontalMenu" class="py-4 float-right px-2">
-        <img
-          id="menuBtn"
-          src="assets/icons/menu.svg"
-          width="24px"
-          height="24px"
-          class="ml-auto sm:hidden hover:cursor-pointer"
-        />
+    <nav class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-300 w-full">
+  <div id="horizontalMenu" class="py-4 px-2 flex justify-between items-center">
+    <a href="#home" class="text-xl font-bold text-gray-800">Subek Sharma</a>
+    <div class="flex items-center">
+      <img
+        id="menuBtn"
+        src="assets/icons/menu.svg"
+        width="24px"
+        height="24px"
+        class="sm:hidden hover:cursor-pointer"
+      />
+      <ul class="hidden sm:flex space-x-8 ml-auto">
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#home" class="font-semibold">Home</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#about" class="font-semibold">About</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#education" class="font-semibold">Education</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#skills" class="font-semibold">Skills</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#projects" class="font-semibold">Projects</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#publications" class="font-semibold">Publications</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#contact" class="font-semibold">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-        <ul class="hidden sm:flex flex align-center gap-8 ml-auto">
-          <li
-            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
-          >
-            <a href="#home" title="Home" class="font-semibold">Home</a>
-          </li>
-          <li
-            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
-          >
-            <a href="#about" title="About" class="font-semibold">About</a>
-          </li>
-          <li
-            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
-          >
-            <a href="#projects" title="Projects" class="font-semibold"
-              >Projects</a
-            >
-          </li>
-          <li
-            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
-          >
-            <a href="#contact" title="Contact" class="font-semibold">Contact</a>
-          </li>
-        </ul>
-      </div>
+  <div
+    id="verticalMenu"
+    class="hidden sm:hidden fixed top-0 left-0 right-0 h-full bg-white z-50"
+  >
+    <img
+      id="closeMenuBtn"
+      src="assets/icons/close-circle.svg"
+      width="24px"
+      height="24px"
+      class="ml-auto hover:cursor-pointer mt-4 mr-2"
+    />
+    <ul class="flex flex-col gap-4 p-4">
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#home" class="font-semibold">Home</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#about" class="font-semibold">About</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#education" class="font-semibold">Education</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#skills" class="font-semibold">Skills</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#projects" class="font-semibold">Projects</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#publications" class="font-semibold">Publications</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#contact" class="font-semibold">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-      <div
-        id="verticalMenu"
-        class="hidden sm:hidden fixed top-0 left-20 right-0 h-full bg-white z-50"
-      >
-        <img
-          id="closeMenuBtn"
-          src="assets/icons/close-circle.svg"
-          width="24px"
-          height="24px"
-          class="sm:hidden ml-auto hover:cursor-pointer mt-4 mr-2"
-        />
-        <ul class="flex flex-col gap-4 p-4">
-          <li
-            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
-          >
-            <a class="" href="#" title="Home">Home</a>
-          </li>
-          <li
-            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
-          >
-            <a class="" href="#about" title="About">About</a>
-          </li>
-          <li
-            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
-          >
-            <a class="" href="#projects" title="Projects">Projects</a>
-          </li>
-          <li
-            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
-          >
-            <a class="" href="#contact" title="Contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
     <section
       id="home"
