--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
   <body class="relative">
 
     
-    
     <nav class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-300 w-full">
   <div id="horizontalMenu" class="py-4 px-2 flex justify-between items-center">
-    <div class="flex items-center">
+    <div class="flex items-center space-x-8 ml-auto">
       <img
         id="menuBtn"
         src="assets/icons/menu.svg"
         width="24px"
         height="24px"
-        class="sm:hidden hover:cursor-pointer"
+        class="sm:hidden hover:cursor-pointer ml-auto"
       />
       <ul class="hidden sm:flex space-x-8 ml-auto">
         <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
@@ -67,7 +66,7 @@
 
   <div
     id="verticalMenu"
-    class="hidden sm:hidden fixed top-0 left-0 right-0 h-full bg-white z-50"
+    class="hidden sm:hidden fixed top-0 right-0 left-0 h-full bg-white z-50"
   >
     <img
       id="closeMenuBtn"
@@ -101,6 +100,7 @@
     </ul>
   </div>
 </nav>
+
 
 
 
