--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <body class="relative">
 
-    
+
+
     <nav class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-300 w-full">
   <div id="horizontalMenu" class="py-4 px-2 flex justify-between items-center">
     <div class="flex items-center space-x-8 ml-auto">
@@ -50,6 +51,9 @@
         </li>
         <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
           <a href="#skills" class="font-semibold">Skills</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#certifications" class="font-semibold">Certifications</a>
         </li>
         <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
           <a href="#publications" class="font-semibold">Publications</a>
@@ -89,6 +93,9 @@
         <a href="#skills" class="font-semibold">Skills</a>
       </li>
       <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#certifications" class="font-semibold">Certifications</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
         <a href="#publications" class="font-semibold">Publications</a>
       </li>
       <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
@@ -100,6 +107,7 @@
     </ul>
   </div>
 </nav>
+
 
 
 
