--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <a href="#certifications" class="font-semibold">Certifications</a>
         </li>
         <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
+          <a href="#research" class="font-semibold">Research</a>
+        </li>
+        <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
           <a href="#publications" class="font-semibold">Publications</a>
         </li>
         <li class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition ease-in-out duration-300">
@@ -95,6 +98,9 @@
         <a href="#certifications" class="font-semibold">Certifications</a>
       </li>
       <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
+        <a href="#research" class="font-semibold">Research</a>
+      </li>
+      <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
         <a href="#publications" class="font-semibold">Publications</a>
       </li>
       <li class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition ease-in-out duration-300">
@@ -106,6 +112,7 @@
     </ul>
   </div>
 </nav>
+
 
 
 
