--- a/index.html
+++ b/index.html
@@ -392,10 +392,11 @@
       </div>
     </section>
 
-    <footer class="bg-[#5e17eb] py-16">
+    <footer 
+      id = "contact"
+      class="bg-[#5e17eb] py-16">
       <div
-        id = "contact"
-        class="max-w-5xl mx-auto px-2 sm:px-8 grid grid-cols-1 sm:grid-cols-2 gap-4"
+                class="max-w-5xl mx-auto px-2 sm:px-8 grid grid-cols-1 sm:grid-cols-2 gap-4"
       >
         <div class="flex flex-col">
           <p class="text-6xl text-white text-serif">
