--- a/index.html
+++ b/index.html
@@ -288,15 +288,8 @@
       </ul>
     </section>
 
-    <section
-      id="certifications"
-      class="container max-w-5xl my-24 mx-auto px-2 sm:px-8"
-    >
-      <h1
-        class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
-      >
-        Certifications
-      </h1>
+    <section id="certifications" class="container max-w-5xl my-24 mx-auto px-2 sm:px-8">
+  <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Certifications</h1>
 
       <div class="flex flex-col gap-2">
         <ul class="list-disc">
