--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             </div>
             <div class="">
               <p class="text-white uppercase text-xs font-semibold">Phone</p>
-              <a href="tel:+9779845625240">
+              <a href="tel:">
                 <p
                   renderitem="phone"
                   class="text-white text-serif text-lg font-[300]"
