--- a/index.html
+++ b/index.html
@@ -266,9 +266,17 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Publications & Reports</h1>
   <div class="mt-4">
     <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-<b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar <i><a href="https://arxiv.org/abs/2408.00002">"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</a></i>, (In review).
-<b>Subek Sharma</b>, Ramesh Ghimire, Sanjeev Gurung, Shubham GC <i><a href="https://www.researchgate.net/profile/Subek-Sharma/publication/379047797_Gantavya_-_A_Landmark_Recognition_System/links/65f8854b286738732d5cdb0d/Gantavya-A-Landmark-Recognition-System.pdf">"GANTAVYA: A Landmark Recognition System."</a></i>, (In review).
-    </p>
+    <b>Subek Sharma</b>, Sisir Dhakal, Mansi Bhavsar 
+    <i>
+        <a href="https://arxiv.org/abs/2408.00002">"Evaluating Transfer Learning in Deep Learning Models for Classification on a Custom Wildlife Dataset: Can YOLOv8 Surpass Other Architectures?"</a>
+    </i>, (In review).
+    <br><br>
+    <b>Subek Sharma</b>, Rupesh Ghimire, Samir Gurung, Sandesh GC 
+    <i>
+        <a href="https://www.researchgate.net/profile/Subek-Sharma/publication/379047797_Gantavya_-_A_Landmark_Recognition_System/links/65f8854b286738732d5cdb0d/Gantavya-A-Landmark-Recognition-System.pdf">"GANTAVYA: A Landmark Recognition System."</a>
+    </i>, (In review).
+</p>
+
   </div>
 </section>
 
