--- a/index.html
+++ b/index.html
@@ -303,14 +303,16 @@
   <h1 class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif">Medium Articles</h1>
   <div id="articlesList" class="mt-4 grid grid-cols-1 px-6 md:px-2 md:grid-cols-2 gap-8">
     <div class="border p-4 rounded-lg shadow-md">
-      <h2 class="text-lg font-semibold text-gray-800">Article Title 1</h2>
-      <p class="text-gray-600">Brief description of your article. This could be a summary or the main points you discuss.</p>
-      <a href="https://medium.com/your-article-link-1" target="_blank" class="text-indigo-600 hover:underline">Read More</a>
+      <h2 class="text-lg font-semibold text-gray-800">AI in the healthcare industry — latest trends and the future
+
+</h2>
+      <p class="text-gray-600">Artificial Intelligence(AI) has been uplifting the healthcare sector for decades, but we have seen the shift from experimental applications to real-world implementations in recent years.</p>
+      <a href="https://medium.com/@subek-sharma/ai-in-the-healthcare-industry-latest-trends-and-the-future-177f91c9f7c5">Read More</a>
     </div>
     <div class="border p-4 rounded-lg shadow-md">
-      <h2 class="text-lg font-semibold text-gray-800">Article Title 2</h2>
-      <p class="text-gray-600">Brief description of your article. This could be a summary or the main points you discuss.</p>
-      <a href="https://medium.com/your-article-link-2" target="_blank" class="text-indigo-600 hover:underline">Read More</a>
+      <h2 class="text-lg font-semibold text-gray-800">The Ethical and Social Implications of AI Advancements</h2>
+      <p class="text-gray-600">Today, the wave of Artificial Intelligence is expanding in an unprecedented manner. The thing that was mere science fiction just a few years ago has now become a reality that we cannot escape even if we wish to.</p>
+      <a href="https://medium.com/@subek-sharma/the-ethical-and-social-implications-of-ai-advancements-4903a91302d8">Read More</a>
     </div>
     <!-- Add more articles as needed -->
   </div>
