--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               </div>
             </a>
 
-            <a href="https://blog.subeksharma.com.np/" title="Blog">
+            <a href="https://medium.com/@subek-sharma/" title="Blog">
               <div
                 class="w-12 h-12 aspect-square bg-white rounded-full flex items-center justify-center"
               >
